# jsonschema-gen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: coverage.yaml  publish.yaml  py310.yaml  py311.yaml  py312.yaml  py38.yaml  py39.yaml  release.yaml  tests.yaml
docs/source/: conf.py  customization.rst  index.rst  parser.rst  schema.rst  type_map.rst
src/jsonschema_gen/: __init__.py  parsers.py  schema.py  utils.py
tests/: test_annotations.py  test_annotations_310.py  test_annotations_311.py  test_annotations_39.py
